--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "server": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lauraweston",
